Fixed Navbar not showing, adding icon on NavItems, Remove NavMenu on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.active-scroll-spy {
+    color: #0072F5;
+    font-weight: 1000;
+}
